feat: add tabs for project and skills section

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,9 +11,6 @@ html {
   display: grid;
   grid-template-columns: 1fr minmax(100px, 230ch) 1fr;
   grid-template-rows: 1fr, 1fr;
-  /* background-color: aqua; */
-  /* padding: 3em; */
-
 }
 
 main,
@@ -21,7 +18,8 @@ footer,
 .nav-section,
 /* .hero-section, */
 .projects-section,
-.skills-section {
+.skills-section,
+.tabs-section {
   grid-column: 2;
 }
 
