--- a/styles/globals.css
+++ b/styles/globals.css
@@ -43,6 +43,13 @@ footer,
   margin: 0;
 }
 
+
+
+
+.subtitle {
+  grid-column: 1/-1;
+}
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
